<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hotel el Guadual App</string>
    <string name="titulo_login">LOGIN</string>
    <string name="registro" translatable="false" tools:ignore="MissingTranslation">Registro</string>
    <string name="nombres">Nombre</string>
    <string name="correo">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="contraseña_no_coincide">Contraseñas no coinciden</string>
    <string name="tipo_documento">tipo documento</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="login">LOGIN</string>
    <string name="registrologin">REGISTRO</string>
    <string name="exito">Registro Exitoso</string>
    <string name="caracteres">Contraseña debe contener mas de 5 caracteres </string>
    <string name="login_correo">Ingrese un correo</string>
    <string name="login_contrasena">Ingrese un contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="salir">Cerrar sesión</string>
    <string name="identificacion">Identificación</string>
    <string-array name="tipo_documento">
        <item>Tipo documento</item>
        <item>Cédula de ciudadanía</item>
        <item>Cédula de extranjeria</item>
        <item>Pasaporte</item>
    </string-array>
    <string name="title_activity_main__cliente_">Main_Cliente_Activity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Hotel el Guadual</string>
    <string name="informacion">Información y Reserva</string>
    <string name="restaurante">Restaurante</string>
    <string name="tienda">Nuestra Tienda</string>
    <string name="lugares">Sitios de interés</string>
    <string name="gestion">Gestionar cuenta</string>
    <string name="gestionar_cuenta">gestionar cuenta usuario, actualizar datos, cerrar sesion</string>
    <string name="informacion_hotel_promociones_y_descuentos">informacion hotel, promociones y descuentos</string>
    <string name="info_y_reservas">infomación  y reserva </string>
    <string name="lugares_interes">lugares de interes cercanos al hotel, ¿qué visitar?</string>
    <string name="info_restaurante">información Restaurante, menú del día y demás servicios de restaurante</string>
    <string name="tienda_hotel">informacion de productos ofrecidos por el hotel para la venta</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="estado">Estado</string>
    <string name="valor">Valor</string>
    <string name="descripci_n">Descripción</string>
    <string name="id_habitacion">id Habitacion</string>
    <string name="nuestra_tienda">Nuestra tienda</string>
    <string name="mis_datos">Mis datos</string>
    <string name="editar_mis_datos"><u>Editar Mis Datos</u></string>
    <string name="valor_por_noche">valor por noche</string>
    <string name="cantidad_disponible">Cantidad Disponible</string>
    <string name="valor_unitario">Valor unitario</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>