<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/informacion" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_restaurante"
            android:title="@string/restaurante" />
        <item
            android:id="@+id/nav_tienda"
            android:icon="@drawable/ic_tienda"
            android:title="@string/tienda" />
        <item
            android:id="@+id/nav_lugares"
            android:icon="@drawable/ic_lugares"
            android:title="@string/lugares" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_gestion"
            android:title="@string/gestion" />

    </group>
</menu>