<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.johans.hotelelguadualapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_restaurante"
        android:name="com.johans.hotelelguadualapp.ui.restaurante.RestauranteFragment"
        android:label="@string/restaurante"
        tools:layout="@layout/fragment_restaurante" />

    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.johans.hotelelguadualapp.ui.cuenta.CuentaFragment"
        android:label="@string/gestion"
        tools:layout="@layout/fragment_cuenta" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.johans.hotelelguadualapp.ui.listas.habitaciones.ListaHabitacionesFragment"
        android:label="@string/info_y_reservas"
        tools:layout="@layout/fragment_lista_habitaciones">
        <action
            android:id="@+id/action_nav_info_to_reservaFragment"
            app:destination="@id/reservaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_tienda"
        android:name="com.johans.hotelelguadualapp.ui.listas.productos.ListaProductoskFragment"
        android:label="Nuestra tienda"
        tools:layout="@layout/fragment_lista_productosk" />
    <fragment
        android:id="@+id/nav_mapas"
        android:name="com.johans.hotelelguadualapp.ui.lugares.MapsFragment"
        android:label="@string/lugares"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/reservaFragment"
        android:name="com.johans.hotelelguadualapp.ui.reservas.ReservaFragment"
        android:label="Reservar"
        tools:layout="@layout/fragment_reserva">
        <argument
            android:name="HabitacionReserva"
            app:argType="com.johans.hotelelguadualapp.server.HabitacionServer" />
    </fragment>
</navigation>